Rename header/footer partials for GitHub Pages

--- a/404.html
+++ b/404.html
@@ -17,14 +17,14 @@
 <link rel="stylesheet" href="css/404.css">
 </head>
 <body>
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main>
     <div class="wrap">
       <div class="card" role="alert">
         <span class="pill"><i class="fa-solid fa-triangle-exclamation"></i> 404 - Not Found</span>
         <h1>We lost that page.</h1>
-        <p>The link you followed may be broken or the page may have been moved. Let’s get you back on track.</p>
+        <p>The link you followed may be broken or the page may have been moved. Letï¿½s get you back on track.</p>
         <div class="btn-row">
           <a class="btn btn-primary" href="index.html"><i class="fa-solid fa-house"></i> Go home</a>
           <a class="btn btn-secondary" href="product.html"><i class="fa-solid fa-video"></i> Explore the product</a>
@@ -33,7 +33,7 @@
       </div>
     </div>
   </main>
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
 <script src="js/global.js"></script>
 <script src="js/forms.js"></script>
