--- a/Investor.html
+++ b/Investor.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/investor.css">
 </head>
 <body>
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main>
     <!-- Hero Section: Investment Opportunity -->
@@ -1217,19 +1217,19 @@
             <h3>Revenue Projections</h3>
             <div class="revenue-forecast">
               <div class="revenue-year">
-                <strong>Year 1:</strong> $150K (500 units × $300 avg)
+                <strong>Year 1:</strong> $150K (500 units ï¿½ $300 avg)
               </div>
               <div class="revenue-year">
-                <strong>Year 2:</strong> $1.2M (4,000 units × $300 avg)
+                <strong>Year 2:</strong> $1.2M (4,000 units ï¿½ $300 avg)
               </div>
               <div class="revenue-year">
-                <strong>Year 3:</strong> $5M (16,000 units × $300 avg)
+                <strong>Year 3:</strong> $5M (16,000 units ï¿½ $300 avg)
               </div>
               <div class="revenue-year">
-                <strong>Year 4:</strong> $15M (50,000 units × $300 avg)
+                <strong>Year 4:</strong> $15M (50,000 units ï¿½ $300 avg)
               </div>
               <div class="revenue-year">
-                <strong>Year 5:</strong> $40M (130,000 units × $300 avg)
+                <strong>Year 5:</strong> $40M (130,000 units ï¿½ $300 avg)
               </div>
             </div>
           </div>
@@ -1280,7 +1280,7 @@
           <div class="card investor-team-card">
             <img src="Image/kiff.jpg" alt="Kiff Simon avatar" class="avatar">
             <h3>Kiff Simon</h3>
-            <p>Founder — Engineer, Builder, Operator</p>
+            <p>Founder ï¿½ Engineer, Builder, Operator</p>
             <p class="team-bio">Experienced engineer and entrepreneur with expertise in hardware development, AI systems, and product operations.</p>
           </div>
         </div>
@@ -1334,12 +1334,12 @@
               </div>
               <div class="form-field">
                 <label for="investor-amount">Target check size</label>
-                <input id="investor-amount" name="amount" type="text" placeholder="$250k–$1.5m">
+                <input id="investor-amount" name="amount" type="text" placeholder="$250kï¿½$1.5m">
               </div>
             </div>
             <div class="form-field">
               <label for="investor-note">Notes</label>
-              <textarea id="investor-note" name="note" rows="4" placeholder="Stage, fund, areas of focus…"></textarea>
+              <textarea id="investor-note" name="note" rows="4" placeholder="Stage, fund, areas of focusï¿½"></textarea>
             </div>
             <button class="btn btn-primary" type="submit"><i class="fa-solid fa-paper-plane"></i> Submit interest</button>
             <div id="investor-message" class="form-message" aria-live="polite"></div>
@@ -1349,7 +1349,7 @@
     </section>
     </main>
 
-    <footer class="site-footer" data-include="_footer.html"></footer>
+    <footer class="site-footer" data-include="footer.html"></footer>
 
     <script src="js/global.js"></script>
     <script src="js/forms.js"></script>
