--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-<header class="site-header" data-include="_header.html"></header>
+<header class="site-header" data-include="header.html"></header>
 
 <main id="main-content">
   <!-- About -->
@@ -123,7 +123,7 @@
               </div>
               <div>
                 <div style="font-weight: 600; color: var(--ink); margin-bottom: var(--space-1);">Location</div>
-                <div>Remote-first • Worldwide</div>
+                <div>Remote-first ï¿½ Worldwide</div>
               </div>
             </li>
           </ul>
@@ -166,7 +166,7 @@
     </div>
   </section>
 </main>
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
 <script src="js/global.js"></script>
 
