--- a/admin/logs.html
+++ b/admin/logs.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="../css/admin-logs.css">
 </head>
 <body class="admin-body">
-  <header class="site-header" data-include="../_header.html"></header>
+  <header class="site-header" data-include="../header.html"></header>
 
   <main class="admin-main logs-main">
     <section class="admin-hero hero-gradient">
@@ -102,7 +102,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="../_footer.html"></footer>
+  <footer class="site-footer" data-include="../footer.html"></footer>
 
   <script src="../js/global.js"></script>
   <script src="../js/forms.js"></script>
