--- a/camera.html
+++ b/camera.html
@@ -234,7 +234,7 @@
     </style>
 </head>
 <body>
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main>
         <!-- Hero Section -->
@@ -496,7 +496,7 @@
         </section>
     </main>
 
-    <footer class="site-footer" data-include="_footer.html"></footer>
+    <footer class="site-footer" data-include="footer.html"></footer>
 
     <script src="js/global.js"></script>
     <script src="js/index.js"></script>
