--- a/cart.html
+++ b/cart.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="css/cart.css">
 </head>
 <body>
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main>
     <section class="cart-hero hero-gradient">
@@ -101,7 +101,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
   <script src="js/global.js"></script>
   <script src="js/forms.js"></script>
