--- a/contact.html
+++ b/contact.html
@@ -17,14 +17,14 @@
 <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main id="main-content">
     <section class="contact-hero contact-hero-gradient">
       <div class="wrap">
         <div class="card contact-hero-card">
           <div>
-            <p class="small-text contact-hero-eyebrow">Partnerships • Pilots • Support</p>
+            <p class="small-text contact-hero-eyebrow">Partnerships ï¿½ Pilots ï¿½ Support</p>
             <h1>Talk with the Orbsurv team</h1>
             <p class="contact-hero-description">Share the deployment you're planning, the facility you monitor today, or the partnership you have in mind. We route each inquiry to the right engineer so you receive a useful response fast.</p>
           </div>
@@ -115,7 +115,7 @@
         </div>
         <div class="card contact-hours-card">
           <h3 class="contact-hours-title">Office hours</h3>
-          <p class="contact-hours-text">Monday–Friday · 8a–7p CT<br>Emergency pilot support is monitored 24/7.</p>
+          <p class="contact-hours-text">Mondayï¿½Friday ï¿½ 8aï¿½7p CT<br>Emergency pilot support is monitored 24/7.</p>
           <div class="card contact-cta-card">
             <p class="contact-cta-title">Need a live walkthrough?</p>
             <p class="contact-cta-description">Book a 20-minute screenshare with deployment engineering.</p>
@@ -180,7 +180,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
   <script src="js/global.js"></script>
   <script src="js/forms.js"></script>
