--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/demo.css">
 </head>
 <body>
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main>
         <section id="tech" class="hero-gradient">
@@ -133,7 +133,7 @@
         </section>
 
     </main>
-    <footer class="site-footer" data-include="_footer.html"></footer>
+    <footer class="site-footer" data-include="footer.html"></footer>
     <script src="js/global.js"></script>
     <script src="js/forms.js"></script>
     <script src="js/index.js"></script>
