--- a/demo2.html
+++ b/demo2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Orbsurv Rail Cam — Modernized SPA</title>
+  <title>Orbsurv Rail Cam ï¿½ Modernized SPA</title>
   <link rel="icon" type="image/x-icon" href="Image/Group 213.png">
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="css/demo2.css">
 </head>
 <body>
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main>
     <section class="section" id="demo" style="background: linear-gradient(135deg, rgba(13, 110, 253, 0.08), rgba(13, 202, 240, 0.05)); border-bottom: 1px solid var(--line);">
@@ -95,8 +95,8 @@
       <div class="wrap">
         <div class="grid" style="grid-template-columns:repeat(3,1fr)">
           <div class="card pad"><div class="mini">Rail length</div><div style="font-weight:700">900 mm</div></div>
-          <div class="card pad"><div class="mini">Sweep FOV</div><div style="font-weight:700">dynamic 90–120° virtual</div></div>
-          <div class="card pad"><div class="mini">Events</div><div style="font-weight:700">Heat · Motion · Packages</div></div>
+          <div class="card pad"><div class="mini">Sweep FOV</div><div style="font-weight:700">dynamic 90ï¿½120ï¿½ virtual</div></div>
+          <div class="card pad"><div class="mini">Events</div><div style="font-weight:700">Heat ï¿½ Motion ï¿½ Packages</div></div>
         </div>
       </div>
     </section>
@@ -114,9 +114,9 @@
         <input class="range" id="chaos" type="range" min="0" max="1" step="0.02" value="0"/>
         <span class="mini" id="chaosVal">0.00</span>
       </div>
-      <div>FPS</div><div><b id="opFPS">–</b></div>
+      <div>FPS</div><div><b id="opFPS">ï¿½</b></div>
       <div>Pos ? Target</div><div><b id="opPos">0.00 ? 0.00</b></div>
-      <div>Zone</div><div><b id="opZone">–</b></div>
+      <div>Zone</div><div><b id="opZone">ï¿½</b></div>
       <div>Fault</div><div><b id="opFault">none</b></div>
     </div>
 
@@ -140,7 +140,7 @@
   <!-- Error overlay -->
   <div id="err" class="errOverlay hidden"></div>
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
   <script src="js/global.js"></script>
   <script src="js/demo2.js"></script>
 </body>
