--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main id="main-content">
         <section id="hero-section" class="hero-gradient">
@@ -280,7 +280,7 @@
               </div>
               <div class="card">
                 <h3>Decide</h3>
-                <p>Only high-signal events trigger alerts and recordings—noise is filtered out.</p>
+                <p>Only high-signal events trigger alerts and recordingsï¿½noise is filtered out.</p>
               </div>
             </div>
           </div>
@@ -413,7 +413,7 @@
     </main>
     <!-- FOOTER -->
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
 <script src="js/global.js"></script>
 
