--- a/pricing.html
+++ b/pricing.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/pricing.css">
 </head>
 <body>
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main>
     <section class="pricing-hero hero-gradient">
@@ -32,7 +32,7 @@
         <article class="card plan-card">
           <h2>Starter</h2>
           <p class="plan-price"><span>$299</span> / month</p>
-          <p style="font-size: 0.875rem; color: var(--mute); margin-bottom: var(--space-3);">Annual commitment • No setup fees</p>
+          <p style="font-size: 0.875rem; color: var(--mute); margin-bottom: var(--space-3);">Annual commitment ï¿½ No setup fees</p>
           <ul class="plan-features">
             <li><i class="fa-solid fa-check"></i> Single rail up to 30 ft</li>
             <li><i class="fa-solid fa-check"></i> Hardware leasing included</li>
@@ -47,7 +47,7 @@
           <p class="plan-tag">Most popular</p>
           <h2>Perimeter</h2>
           <p class="plan-price"><span>$649</span> / month</p>
-          <p style="font-size: 0.875rem; color: var(--mute); margin-bottom: var(--space-3);">Annual commitment • No setup fees</p>
+          <p style="font-size: 0.875rem; color: var(--mute); margin-bottom: var(--space-3);">Annual commitment ï¿½ No setup fees</p>
           <ul class="plan-features">
             <li><i class="fa-solid fa-check"></i> Up to 3 connected rails</li>
             <li><i class="fa-solid fa-check"></i> Hardware leasing included</li>
@@ -62,7 +62,7 @@
         <article class="card plan-card">
           <h2>Enterprise</h2>
           <p class="plan-price"><span>Custom</span></p>
-          <p style="font-size: 0.875rem; color: var(--mute); margin-bottom: var(--space-3);">Flexible terms • Volume pricing available</p>
+          <p style="font-size: 0.875rem; color: var(--mute); margin-bottom: var(--space-3);">Flexible terms ï¿½ Volume pricing available</p>
           <ul class="plan-features">
             <li><i class="fa-solid fa-check"></i> Unlimited rails and zones</li>
             <li><i class="fa-solid fa-check"></i> Dedicated private cloud or on-premises</li>
@@ -85,7 +85,7 @@
           </details>
           <details>
             <summary>What is the contract commitment?</summary>
-            <p>Starter and Perimeter plans require a 12-month commitment. Enterprise plans offer flexible terms based on deployment scale. Early termination fees may apply—contact us for details.</p>
+            <p>Starter and Perimeter plans require a 12-month commitment. Enterprise plans offer flexible terms based on deployment scale. Early termination fees may applyï¿½contact us for details.</p>
           </details>
           <details>
             <summary>Can I add more coverage later?</summary>
@@ -93,7 +93,7 @@
           </details>
           <details>
             <summary>Do you offer pilots or trials?</summary>
-            <p>The Starter tier is ideal for pilots. We also support custom proof-of-concept deployments—reach out via the contact form to discuss trial options.</p>
+            <p>The Starter tier is ideal for pilots. We also support custom proof-of-concept deploymentsï¿½reach out via the contact form to discuss trial options.</p>
           </details>
         </div>
       </div>
@@ -120,7 +120,7 @@
 
     <!-- FOOTER -->
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
   <!-- Purchase Modal -->
   <div id="purchase-modal" class="modal" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 1000; align-items: center; justify-content: center;">
