--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/product.css">
 </head>
 <body>
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main id="main-content" class="product-page">
         <section id="product-hero" class="hero-gradient">
@@ -569,7 +569,7 @@
         </section>
     </main>
 
-    <footer class="site-footer" data-include="_footer.html"></footer>
+    <footer class="site-footer" data-include="footer.html"></footer>
 
     <script src="js/global.js"></script>
     <script src="js/forms.js"></script>
