--- a/terms.html
+++ b/terms.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/terms.css">
 </head>
 <body class="legal-page">
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main class="legal-main">
   <section class="legal-hero section-alt" style="background: linear-gradient(135deg, rgba(13, 110, 253, 0.08), rgba(13, 202, 240, 0.05));">
@@ -179,7 +179,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
   <script src="js/global.js"></script>
   <script src="js/forms.js"></script>
