--- a/admin.html
+++ b/admin.html
@@ -25,7 +25,7 @@
 
 
 
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main class="admin-main" data-admin-content hidden>
     <section class="admin-hero">
@@ -181,7 +181,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
   <div class="toast" data-toast role="status" aria-live="polite"></div>
 
