--- a/api.html
+++ b/api.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <a href="#main-content" class="skip-link">Skip to main content</a>
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main id="main-content">
     <!-- Hero Section -->
@@ -529,7 +529,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
   <script src="js/global.js"></script>
   <script src="js/forms.js"></script>
