--- a/app/profile.html
+++ b/app/profile.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="../css/account.css">
 </head>
 <body>
-  <header class="site-header" data-include="../_header.html"></header>
+  <header class="site-header" data-include="../header.html"></header>
 
   <main>
     <section class="account-hero hero-gradient">
@@ -154,7 +154,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="../_footer.html"></footer>
+  <footer class="site-footer" data-include="../footer.html"></footer>
 
   <script src="../js/global.js"></script>
   <script src="../js/forms.js"></script>
