--- a/forgot-password.html
+++ b/forgot-password.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/auth.css">
 </head>
 <body class="auth-page">
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main class="auth-main">
     <div class="card auth-card" role="form">
@@ -47,7 +47,7 @@
 
     <!-- FOOTER -->
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
 <script src="js/global.js"></script>
 
