--- a/help.html
+++ b/help.html
@@ -202,7 +202,7 @@
   </style>
 </head>
 <body>
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main>
     <section class="hero-gradient hero-padding">
@@ -621,7 +621,7 @@
     </section>
   </main>
 
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
   <script src="js/global.js"></script>
   <script src="js/forms.js"></script>
