--- a/pre-order.html
+++ b/pre-order.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
-    <header class="site-header" data-include="_header.html"></header>
+    <header class="site-header" data-include="header.html"></header>
 
     <main id="main-content">
         <section class="hero-gradient" style="padding: clamp(24px, 3vw, 32px) 0;">
@@ -105,7 +105,7 @@
         </section>
     </main>
 
-    <footer class="site-footer" data-include="_footer.html"></footer>
+    <footer class="site-footer" data-include="footer.html"></footer>
 
     <script src="js/global.js"></script>
     <script src="js/forms.js"></script>
