--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <header class="site-header" data-include="_header.html"></header>
+  <header class="site-header" data-include="header.html"></header>
 
   <main>
     <!-- HERO -->
@@ -125,7 +125,7 @@
       </div>
     </section>
   </main>
-  <footer class="site-footer" data-include="_footer.html"></footer>
+  <footer class="site-footer" data-include="footer.html"></footer>
 
 <script src="js/global.js"></script>
 <script src="js/forms.js"></script>
